--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,38 @@
 body {
     margin: 0 auto;
     padding: 8px;
+    background-color: g#03A9F4;
+    font-family: 'Kanit', sans-serif;
 }
 
-/* .title {
-    font-size: 32px;
-    text-align: center;
-    color: #eee;
-} */
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin: auto;
+    width: 200px;
+    height: 200px;
+}
 
+.btn {
+    background: pink;
+    padding: 8px 10px 12px 16px;
+}
+
+#title {
+    color: black;
+    text-align: center;
+}
+
+.title-class {
+    color: #fff;
+    text-align: center;
+    font-size: 30px
+}
+
+.title-class2 {
+    color: #fff;
+    text-align: center;
+    font-size: 35px;
+}
