--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0 auto;
     padding: 8px;
-    background-color: g#03A9F4;
+    background-color:#03A9F4;
     font-family: 'Kanit', sans-serif;
 }
 
