--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body {
     margin: 0 auto;
     padding: 8px;
     background-color:#03A9F4;
-    font-family: 'Kanit', sans-serif;
+    font-family:fantasy;
+    font-style:italic;
+    
 }
 
 .img {
@@ -28,11 +30,11 @@ body {
 .title-class {
     color: #fff;
     text-align: center;
-    font-size: 30px
+    font-size: 40px
 }
 
 .title-class2 {
     color: #fff;
     text-align: center;
-    font-size: 35px;
+    font-size: 40px;
 }
